hphp/test/zend7/Zend/tests/type_declarations/array_001.php.expectf
3

Fatal error: %s
Stack trace:
#0 %s(%d): foo(123)
#1 {main}
  thrown in %s on line 2